[Upd] Update Mosq.conf

--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -4,8 +4,7 @@
 #
 # Default values are shown, uncomment to change.
 #
-# Use the # character to indicate a comment, but only if it is the
-# very first character on the line.
+# Use the # character to indicate a comment, but only if it is the very first character on the line.
 
 # =================================================================
 # General configuration
