--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 scipy~=1.11.2
-numpy~=1.25.0
+numpy~=1.26.3
 matplotlib~=3.8.0
-Flask~=2.3.2
+Flask~=3.0.0
 paho-mqtt~=1.6.1
-gevent~=22.10.2
+gevent~=23.9.1
+torch~=2.1.2
+opencv-python~=4.8.1.78
+loguru~=0.7.2
